fix: overflow x

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
 }
 body {
   background: #fff;
+  overflow-x: hidden;
 }
 .routing--first__container {
   width: 100%;
